--- a/Assets/UIDocuments/NamedShipSelectorDialog.uxml
+++ b/Assets/UIDocuments/NamedShipSelectorDialog.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement class="panel-dialog" style="flex-grow: 0;">
-        <ui:Label text="Label" class="title" />
-        <ui:ListView name="NamedShipListView" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/Templates/NamedShipLabel.uxml?fileID=9197481963319205126&amp;guid=be84ada722b028f4b8b3547e1e58ed36&amp;type=3#NamedShipLabel" style="flex-grow: 1;" />
+    <ui:VisualElement data-source-type="GameManager, Assembly-CSharp" class="panel-dialog" style="flex-grow: 0;">
+        <ui:Label text="Named Ship Selector" class="title" />
+        <ui:ListView name="NamedShipListView" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/Templates/NamedShipLabel.uxml?fileID=9197481963319205126&amp;guid=be84ada722b028f4b8b3547e1e58ed36&amp;type=3#NamedShipLabel" data-source-path="navalGameState.namedShips" style="flex-grow: 1;" />
         <ui:VisualElement style="flex-grow: 0; flex-direction: row; flex-shrink: 0;">
             <ui:Button text="Confirm" name="ConfirmButton" style="flex-basis: 50px; flex-grow: 1;" />
             <ui:Button text="Cancel" name="CancelButton" style="flex-basis: 50px; flex-grow: 1;" />
