--- a/Assets/UIDocuments/OOBEditor.uxml
+++ b/Assets/UIDocuments/OOBEditor.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:Template name="GlobalStringEditor" src="project://database/Assets/UIDocuments/GlobalStringEditor.uxml?fileID=9197481963319205126&amp;guid=bbf36dc1793baa44a987432580e3d674&amp;type=3#GlobalStringEditor" />
+    <ui:Template name="NamedShipVisualizer" src="project://database/Assets/UIDocuments/NamedShipVisualizer.uxml?fileID=9197481963319205126&amp;guid=31d24939061571546a16f9a8bd6443ed&amp;type=3#NamedShipVisualizer" />
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
     <ui:VisualElement data-source-type="OOBEditor, Assembly-CSharp" class="panel" style="flex-grow: 1;">
         <ui:Label text="OOB Editor" class="title" />
@@ -75,9 +76,12 @@
                     </ui:Label>
                     <ui:Label text="Selected ShipLog&apos;s captain&apos;s name">
                         <Bindings>
-                            <ui:DataBinding property="text" binding-mode="ToTarget" source-to-ui-converters="ShipLog =&gt; ShipLog&apos;s captain&apos;s merge name" />
+                            <ui:DataBinding property="text" binding-mode="ToTarget" data-source-path="captainDesc" />
                         </Bindings>
                     </ui:Label>
+                    <ui:VisualElement data-source-path="namedShipProp" style="flex-grow: 1;">
+                        <ui:Instance template="NamedShipVisualizer" />
+                    </ui:VisualElement>
                     <Bindings>
                         <ui:DataBinding property="style.display" binding-mode="ToTarget" source-to-ui-converters="ShipLog to DisplayStyle" />
                     </Bindings>
