--- a/Assets/UIDocuments/Templates/ShipLogSelector/ShipLogSelectorCellName.uxml
+++ b/Assets/UIDocuments/Templates/ShipLogSelector/ShipLogSelectorCellName.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:Label data-source-type="NavalCombatCore.ShipLog, Assembly-CSharp">
         <Bindings>
-            <ui:DataBinding property="text" data-source-path="name.mergedName" binding-mode="ToTarget" />
+            <ui:DataBinding property="text" binding-mode="ToTarget" source-to-ui-converters="ShipLog =&gt; ShipLog&apos;s merge name" />
         </Bindings>
     </ui:Label>
 </ui:UXML>
