--- a/Assets/UIDocuments/TopTabs.uxml
+++ b/Assets/UIDocuments/TopTabs.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
-    <ui:VisualElement style="flex-grow: 0; background-color: rgba(255, 255, 255, 0.49);">
+    <ui:VisualElement data-source-type="GameManager, Assembly-CSharp" style="flex-grow: 0; background-color: rgba(255, 255, 255, 0.49);">
         <ui:TabView>
             <ui:Tab label="General">
                 <ui:VisualElement style="flex-grow: 1; flex-direction: row; flex-wrap: wrap;">
@@ -9,6 +9,12 @@
                     <ui:DropdownField name="PlayerDropdownField" style="width: 300px;" />
                     <ui:Button text="Save" name="SaveButton" />
                     <ui:Button text="Load" name="LoadButton" />
+                    <ui:Label text="Label" />
+                    <ui:EnumField value="Center" type="NavalCombatCore.LanguageType, Assembly-CSharp">
+                        <Bindings>
+                            <ui:DataBinding property="value" data-source-path="iconLanuageType" binding-mode="TwoWay" />
+                        </Bindings>
+                    </ui:EnumField>
                 </ui:VisualElement>
             </ui:Tab>
             <ui:Tab label="Editor">
