--- a/Assets/UIDocuments/styles/style.uss
+++ b/Assets/UIDocuments/styles/style.uss
@@ -120,3 +120,7 @@
     width: 18px;
     height: 18px;
 }
+
+.link-cursor {
+    cursor: url("project://database/Assets/Textures/signal_flag.png?fileID=2800000&guid=872ba5279dbe95746b30f77407926404&type=3#signal_flag");
+}
